--- a/css/root.scss
+++ b/css/root.scss
@@ -1,1 +1,17 @@
+$background-color:#E0F8FF;
+
+// #region main colors
 $primary-color:#0055FF;
+$success-color:#00B277;
+$danger-color:#FF2F2F;
+$warning-color:#C7B300;
+$secondary-color:#969696;
+// #endregion
+
+// #region hover colors
+$primary-hover-color:#0047D6;
+$success-hover-color:#009563;
+$danger-hover-color:#D40C0C;
+$warning-hover-color:#A09000;
+$secondary-hover-color:#767676;
+// #endregion
