--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-* {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Vazir FD';
 }
 
 body {
