Fix Toggle button bug

--- a/css/controls.css
+++ b/css/controls.css
@@ -195,7 +195,7 @@ body {
   border-radius: 1em;
 }
 
-input[type=checkbox] {
+input[type=checkbox]:not(input.toggle) {
   position: relative;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -207,7 +207,7 @@ input[type=checkbox] {
   margin: 0 1em;
 }
 
-input[type=checkbox]::before, input[type=checkbox]::after {
+input[type=checkbox]:not(input.toggle)::before, input[type=checkbox]:not(input.toggle)::after {
   content: "";
   display: block;
   background-size: cover;
@@ -223,20 +223,20 @@ input[type=checkbox]::before, input[type=checkbox]::after {
   transition: opacity 0.5s;
 }
 
-input[type=checkbox]::before {
+input[type=checkbox]:not(input.toggle)::before {
   background-image: url("../imgs/Unckecked.svg");
 }
 
-input[type=checkbox]::after {
+input[type=checkbox]:not(input.toggle)::after {
   background-image: url("../imgs/Checked.svg");
   opacity: 0;
 }
 
-input[type=checkbox]:checked::before {
+input[type=checkbox]:not(input.toggle):checked::before {
   opacity: 0;
 }
 
-input[type=checkbox]:checked::after {
+input[type=checkbox]:not(input.toggle):checked::after {
   opacity: 1;
 }
 
