--- a/css/controls.scss
+++ b/css/controls.scss
@@ -167,7 +167,7 @@ body{
     border-radius: 1em;
 }
 
-input[type=checkbox]:not(input.toggle,input.changeForm){
+input[type=checkbox]:not(input.toggle){
     position: relative;
     appearance: none;
     outline: none;
