--- a/css/controls.css
+++ b/css/controls.css
@@ -8,15 +8,31 @@
 }
 
 body {
-  background-color: #E0F8FF;
-  margin: 0 5em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+body::-webkit-scrollbar {
+  margin: 1em;
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  margin: 1em;
+  background: #C4C4C4;
+  border-radius: 0.5em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #F4F4F4;
+  border-radius: 0.5em;
+  border: 3px #C4C4C4 solid;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .container {
@@ -123,6 +139,29 @@ body {
   content: 'انتخاب گر چند تایی';
 }
 
+.link {
+  text-align: center;
+  text-decoration: none;
+  color: #0055FF;
+  cursor: pointer;
+}
+
+.color-danger {
+  color: #FF2F2F;
+}
+
+.color-warning {
+  color: #C7B300;
+}
+
+.color-primary {
+  color: #0055FF;
+}
+
+.color-secondary {
+  color: #969696;
+}
+
 .btn {
   padding: 1em 3em;
   margin: 0.8em;
@@ -134,6 +173,8 @@ body {
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
   cursor: pointer;
+  text-align: center;
+  font-size: 16px;
 }
 
 .btn.btn-success {
@@ -568,6 +609,7 @@ input[type=file]:valid + label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   min-width: 15em;
   position: relative;
   color: #000;
