--- a/css/style.scss
+++ b/css/style.scss
@@ -118,11 +118,11 @@ body{
         position: absolute;
         flex-direction: column;
         padding: 1em 2em;
-        background-color: rgba(255, 255, 255, 0.3);
+        background-color: rgba(255, 255, 255, 0.2);
         border-radius: 1em;
         border: 1px solid #fff;
         margin-right: 2em;
-        backdrop-filter: blur(20px);
+        backdrop-filter: blur(10px);
         box-shadow: 0 0 10px rgba(0, 0, 0, .2);
         opacity: 0;
         transform: translateY(10%);
@@ -147,6 +147,7 @@ body{
                 }
             }
             ul{
+                background-color: #eeeeee;
                 padding: 1em 2em;
                 margin-top: -2em;
                 margin-right: 3.5em;
